# zed

./: Cargo.toml
assets/settings/: default.json
crates/debugger_ui/src/session/: running.rs
crates/editor/src/: element.rs
crates/fs/src/: fake_git_repo.rs
crates/git/src/: git.rs  repository.rs
crates/git_ui/src/: commit_modal.rs  git_panel.rs
crates/gpui/src/: platform.rs
crates/gpui/src/platform/linux/wayland/: client.rs  window.rs
crates/gpui/src/platform/linux/x11/: client.rs
crates/gpui/src/platform/windows/: window.rs
crates/language/: Cargo.toml
crates/language/src/: language_settings.rs
crates/markdown_preview/src/: markdown_renderer.rs
crates/prediction_provider_selector/: Cargo.toml
crates/prediction_provider_selector/src/: prediction_provider_selector.rs
crates/project/src/: git_store.rs
crates/proto/proto/: git.proto
crates/settings/src/: settings_content.rs
crates/settings_ui/src/: settings_ui.rs
crates/terminal/src/: terminal_settings.rs
crates/terminal_view/src/: terminal_panel.rs
crates/title_bar/src/: title_bar.rs  title_bar_settings.rs
crates/workspace/src/: pane.rs  workspace.rs
crates/worktree/src/: worktree.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
docs/src/: configuring-zed.md  visual-customization.md
