[package]
name = "prediction_provider_selector"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/prediction_provider_selector.rs"
doctest = false

[dependencies]
language.workspace = true
fuzzy.workspace = true
strum.workspace = true
gpui.workspace = true
picker.workspace = true
settings.workspace = true
ui.workspace = true
util.workspace = true
fs.workspace = true
workspace.workspace = true

[dev-dependencies]
editor = { workspace = true, features = ["test-support"] }
